--- a/index.html
+++ b/index.html
@@ -6,6 +6,21 @@
     <meta name="theme-color" content="#000000" />
     <link rel="shortcut icon" type="image/ico" href="/src/assets/favicon.ico" />
     <title>Solid App</title>
+    <style>
+      #root {
+        display: flex;
+      }
+
+      #root aside {
+        min-width: 250px;
+        display: flex;
+        flex-direction: column;
+      }
+
+      #root aside a {
+        margin-bottom: 10px;
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
