--- a/index.html
+++ b/index.html
@@ -1,31 +1,31 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <link rel="shortcut icon" type="image/ico" href="/src/assets/favicon.ico" />
-    <title>Solid App</title>
-    <style>
-      #root {
-        display: flex;
-      }
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta name="theme-color" content="#000000" />
+        <link rel="shortcut icon" type="image/ico" href="/src/assets/favicon.ico" />
+        <title>Solid App</title>
+        <style>
+            #root {
+                display: flex;
+            }
 
-      #root aside {
-        min-width: 250px;
-        display: flex;
-        flex-direction: column;
-      }
+            #root aside {
+                min-width: 250px;
+                display: flex;
+                flex-direction: column;
+            }
 
-      #root aside a {
-        margin-bottom: 10px;
-      }
-    </style>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+            #root aside a {
+                margin-bottom: 10px;
+            }
+        </style>
+    </head>
+    <body>
+        <noscript>You need to enable JavaScript to run this app.</noscript>
+        <div id="root"></div>
 
-    <script src="/src/index.tsx" type="module"></script>
-  </body>
+        <script src="/src/index.tsx" type="module"></script>
+    </body>
 </html>
